--- a/pages/CustomerList/index.html
+++ b/pages/CustomerList/index.html
@@ -2,9 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
+<title>用户管理</title>
 <script src="/js/load.js"></script>
 <link rel="stylesheet" href="/css/rightCommon.css">
+<script src="./customerList.js"></script>
 </head>
 
 <body>
@@ -15,7 +16,7 @@
 </div>
 <div>
 <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('Oa_customer')"><i class="fas fa-trash-alt"></i> 删除</button>
-<button type="button" class="btn btn-info navbar-btn listButton" onclick="javascript:window.location.href='__URL__/importCustomer'"><i class="fa fa-sign-in" aria-hidden="true"></i> 查看</button>
+<!-- <button type="button" class="btn btn-info navbar-btn listButton" onclick="javascript:window.location.href='__URL__/importCustomer'"><i class="fa fa-sign-in" aria-hidden="true"></i> 查看</button> -->
 <!-- <button type="button" class="btn btn-success navbar-btn listButton" onclick="openAddData('addCustomer')"><i class="fa fa-plus" aria-hidden="true"></i> 新建</button> -->
 <form class="navbar-form navbar-right listSearch" role="search" method="get" action="__ACTION__">
 <div class="form-group">
@@ -50,7 +51,8 @@
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
 <thead>
 <tr>
-<th>序号</th>
+<th>选择</th>
+<!-- <th>序号</th> -->
 <th>ID</th>
 <th>名片照片</th>
 <th>姓名</th>
@@ -61,30 +63,32 @@
 <th>联系方式</th>
 <th>信息来源</th>
 <th>添加时间</th>
+<th>操作</th>
 </tr>
 </thead>
 <tbody>
-<tr>
+<!-- <tr>
 <td><input type="checkbox" name="del_listID" id="del_listID" data-name="multi-select" value="<{$vo.id}>" /></td>
 <td><{$vo.id}></td>
 <td><{$vo.reName}></td>
 <td><a href="__URL__/viewCustomer/id/<{$vo.id}>">查看电话</a></td>
 <td><{$vo.staffName}></td>
 <td>
-<!-- <switch name="vo.status">
+<switch name="vo.status">
 	<case value="0"><font color="#d9534f">无效客户</font></case>
 	<case value="1"><font color="#428bca">未沟通</font></case>
 	<case value="2"><font color="#5cb85c">跟进中</font></case>
 	<case value="3"><font color="#5bc0de">潜在客户</font></case>
 	<case value="4"><font color="#000000">已签约</font></case>
-</switch>	 -->
+</switch>	
 </td>
 <td></td>
 <td></td>
 <td></td>
 <td></td>
 <td width="30%" title="<{$vo['beizhu'][0]['desc']}>" style="cursor: pointer;"><{$vo['beizhu'][0]['desc']|msubstr=0,20}></td>
-</tr>
+<td><a class="btn btn-success navbar-btn" href="/manage.php/Album/albumDetail?album_id=2362">详情</a></td>
+</tr> -->
 
 </tbody>
 </table>
