--- a/pages/UserList/index.html
+++ b/pages/UserList/index.html
@@ -35,7 +35,7 @@
     </select>
     <!-- <input name="keyWord" type="text" class="form-control" id="keyWord" placeholder="请输入关键词进行搜索"> -->
 </div>
-<button type="submit" class="btn btn-primary"><i class="fa fa-search" aria-hidden="true"></i> 搜索</button>
+<button type="submit" class="btn btn-primary" id="btn-search"><i class="fa fa-search" aria-hidden="true"></i> 搜索</button>
 </form>    
 </div>
 </nav>
