--- a/pages/index.html
+++ b/pages/index.html
@@ -43,12 +43,11 @@
     <div class="com-leftBox">
         <div class="com-lbLeftShadow"></div>
         <ul class="com-leftMenu">
-            <li>
+            <!-- <li>
                 <a class="com-TopMenu" data-id="<{$vo.id}>" href="__APP__<{$vo.moduleTypeLink}>" target="right">
                     <i class="fa fa-<{$vo.moduleTypeIcon}>"></i>
-                    123
                 </a>
-            </li>
+            </li> -->
         </ul>
     </div>
     <!--left begin-->
@@ -64,7 +63,7 @@
     //获取侧边栏列表数据
     function asideList() {
         var token = sessionStorage.getItem("token");
-        console.log(token)
+        // console.log(token)
         $.ajax({
             type: "GET",
             url: APP_URL + "/roleMenu",
@@ -80,30 +79,16 @@
                 $.each(data, function (index, val) {
                     if(val.menuOrder ==1){
                         str += `
-                            <li>
+                            <li data-res="${index}">
                                 <a class="com-TopMenu" data-id="${val.id}" href="javascript:void(0)">
                                     <i class="fa"></i>
                                     ${val.menuName}
                                 </a>
                             </li>
                         `;
-                        //${val.parentId}
-                        // if(val.childMenus != []){
-                        //     $.each(val.childMenus, function (index, val2){
-                        //         str2 += `
-                        //             <li>
-                        //                 <a class="com-TopMenu" data-id="${val2.id}" href="${val2.actionPath}" target="right">
-                        //                     <i class="fa>"></i>
-                        //                     ${val2.menuName}
-                        //                 </a>
-                        //             </li>
-                        //         `;
-                        //     });
-                        // }
                     }
                 });
                 $(".com-hmUl").html(str);
-                // $(".com-leftMenu").html(str2);
             }
         });
     }
