--- a/pages/index.html
+++ b/pages/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>新创动力 | 后台管理系统 V3.0</title>
+    <title>汉得 | 后台管理系统 V3.0</title>
     <script src="/js/load.js"></script>
     <!-- <script src="/js/main.js"></script> -->
 </head>
@@ -12,7 +12,7 @@
     <!--header begin-->
     <div class="com-headerBox">
         <div class="com-headerTop com-bg">
-            <div class="com-logo"></div>
+            <div class="com-logo">汉得·管理系统</div>
             <div class="com-htRight">
                 <div class="com-userHea" style="background:url(http://www.icpnt.com) center no-repeat;background-size: cover;"></div>
                 <div class="com-userName"><i class="fa fa-sort-desc downArrow"></i></div>
