--- a/pages/AddCompany/index.html
+++ b/pages/AddCompany/index.html
@@ -6,6 +6,7 @@
     <title>新增公司管理</title>
     <script src="/js/load.js"></script>
     <link rel="stylesheet" href="/css/rightCommon.css">
+    <link rel="stylesheet" href="./addCompany.css">
     <script src="./addCompanyt.js"></script>
 </head>
 
@@ -27,50 +28,86 @@
             <input name="authToken" type="hidden" id="authToken" value="">
             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                 <tbody>
-                    <!-- <tr>
-                        <td align="center">编号</td>
-                        <td><input type="text" name="business_name" id="business_name" class="form-control" datatype="*" nullmsg="自动生成编号" placeholder="--自动生成编号--" ></td>
-                    </tr> -->
                     <tr>
                         <td align="center">账号</td>
-                        <td><input type="text" name="company_tel" id="company_tel" class="form-control" datatype="*" nullmsg="请输入帐号" placeholder="请输入帐号"></td>
+                        <td><input type="text" name="account" id="company_tel" value="gsgsgsgs" class="form-control" datatype="*" nullmsg="请输入帐号" placeholder="请输入帐号"></td>
                     </tr>
 
                     <tr>
                         <td align="center">密码</td>
-                        <td><input type="password" name="password" id="company_password" class="form-control" datatype="*6-15" errormsg="密码范围在6~15位之间！" nullmsg="请输入密码" placeholder="请输入密码"></td>
+                        <td><input type="password" name="password" id="company_password" value="123456" class="form-control" datatype="*6-15" errormsg="密码范围在6~15位之间！" nullmsg="请输入密码" placeholder="请输入密码"></td>
                     </tr>
 
                     <tr>
                         <td align="center">公司名称</td>
-                        <td><input type="text" name="companyname" id="company_name" class="form-control" datatype="*" nullmsg="请输入公司名称" placeholder="请输入公司名称"></td>
+                        <td>
+                            <select class="form-control getPCD" id="allCompany" name="companyname" >
+                                <!-- <option value=""></option> -->
+                            </select>
+                        </td>
                     </tr>
 
                     <tr>
                         <td align="center">负责人姓名</td>
-                        <td><input type="text" name="principalName" id="company_user" class="form-control" datatype="*" nullmsg="请输入负责人姓名" placeholder="请输入负责人姓名"></td>
+                        <td><input type="text" name="principalName" id="company_user" value="kakaka" class="form-control" datatype="*" nullmsg="请输入负责人姓名" placeholder="请输入负责人姓名"></td>
                     </tr>
                     <tr>
                         <td align="center">联系人方式</td>
-                        <td><input type="text" name="phones" id="company_userTel" class="form-control" datatype="*" nullmsg="请选择联系方式" placeholder="请选择联系方式"></td>
+                        <td colspan="4" style="padding-top:8px;" id="addTelText">
+                            <ul>
+                                <li class="pro-section">
+                                    <div class="input-group">
+                                        <input type="text" class="form-control" name="phones[]" value="159878210231" id="attrPhone" placeholder="请输入电话号码">
+                                    </div> 
+                                    <button type="button" class="btn btn-primary" id="addphone"><i class="fa fa-plus" aria-hidden="true"></i> 添加电话</button>
+                                </li>
+                                <!-- <li>
+                                    <li class="pro-section">
+                                        <div class="input-group">
+                                            <input type="text" class="form-control" name="phones[]" id="attrPhone" placeholder="请输入电话号码">
+                                        </div> 
+                                        <button type="button" class="btn btn-primary" id="addphone"><i class="fa fa-plus" aria-hidden="true"></i> 添加电话</button>
+                                    </li> 
+                                </li> -->
+                            </ul>
+                        </td>
                     </tr>
 
                     <tr>
                         <td align="center">所在地区</td>
-                        <td><input type="text" name="provinceid" id="company_city" class="form-control" datatype="*" nullmsg="请选择地区" placeholder="请选择地区"></td>
+                        <td colspan="3">
+                            <select class="form-control getPCD" id="allProvinces" name="provinceid" >
+                                <!-- <option value="110000"></option> -->
+                            </select>
+                            <select class="form-control getPCD" id="allCity" name="cityid" >
+                                <!-- <option value="120100"></option> -->
+                            </select>
+                            <select class="form-control getPCD" id="allArea" name="districtid " >
+                                <!-- <option value="120101"></option> -->
+                            </select>
+                        </td>
                     </tr>
 
                     <tr>
                         <td align="center">详细地址</td>
-                        <td><input type="text" name="address" id="company_address" class="form-control" datatype="*" nullmsg="请输入详细地址" placeholder="请输入详细地址"></td>
+                        <td><input type="text" name="address" id="company_address" class="form-control" value="汤立路" datatype="*" nullmsg="请输入详细地址" placeholder="请输入详细地址"></td>
+                    </tr>
+                    <tr>
+                        <td align="center">开户时间</td>
+                        <td>
+                            <input type="text" name="openaccounttime" value="2018-12-14 10:00" class="form-control jcDate form_datetime dataInput" datatype="*" nullmsg="请选择开户日期" placeholder="请选择开户日期" style="width:33.03%"/>
+                        </td>
+                        
                     </tr>
                     <tr>
                         <td align="center">截止时间</td>
-                        <td><input type="text" name="deadline" id="regDate" class="form-control jcDate" datatype="*" nullmsg="请选择截止日期" placeholder="请选择截止日期" /></td>
+                        <td>
+                            <input type="text" name="deadline" value="2018-12-15 10:00" class="form-control jcDate form_datetime dataInput" datatype="*" nullmsg="请选择截止日期" placeholder="请选择截止日期" style="width:33.03%"/>
+                        </td>
                     </tr>
                     <tr>
                         <td align="center">最终账号数量</td>
-                        <td><input type="text" name="lastAccountCount" id="company_num" class="form-control" datatype="*" nullmsg="请输入最终账号数量" placeholder="请输入最终账号数量"></td>
+                        <td><input type="number" name="lastAccountCount" id="company_num" value="10" class="form-control" datatype="*" nullmsg="请输入最终账号数量" placeholder="请输入最终账号数量"/></td>
                     </tr>
 
                     <tr>
@@ -80,6 +117,7 @@
                             <button type="button" class="btn btn-default" id="cancelButton"><i class="fa fa-times" aria-hidden="true"></i> 取消</button>
                         </td>
                     </tr>
+
                 </tbody>
             </table>
         </form>
@@ -89,6 +127,15 @@
 <script>
     var token = sessionStorage.getItem("token");
     $("#authToken").val(token);
+    $(".form_datetime").datetimepicker({
+        format: 'yyyy-mm-dd hh:ii',//显示格式
+        todayHighlight: 1,//今天高亮
+        minTime: '10',
+        startView:2,
+        forceParse: 0,
+        showMeridian: 1,
+        autoclose: 1//选择后自动关闭
+    });
 </script>
 
 </html>
