--- a/pages/CustomerList/index.html
+++ b/pages/CustomerList/index.html
@@ -6,6 +6,7 @@
 <script src="/js/load.js"></script>
 <link rel="stylesheet" href="/css/rightCommon.css">
 <script src="./customerList.js"></script>
+<script src="/js/moment.js"></script>
 </head>
 
 <body>
