--- a/pages/CustomerDetail/index.html
+++ b/pages/CustomerDetail/index.html
@@ -7,6 +7,8 @@
 	<script src="/js/load.js"></script>
 	<link rel="stylesheet" href="/css/rightCommon.css">
 	<script src="./customerDetail.js"></script>
+	<script src="/js/moment.js"></script>
+	
 	<style>
 		label{ padding:0 10px; margin:0; height:50px; line-height:50px; cursor:pointer;}
 		.gtImg{
@@ -17,7 +19,7 @@
 			margin: 10px 5px;
 		}
 	</style>
-	<script>
+	<!-- <script>
 		//双击编辑字段
 		function ShowElement(element,id,title){
 		var oldhtml = element.innerHTML;
@@ -103,7 +105,7 @@
 	
 	
 })
-</script>
+</script> -->
 </head>
 
 <body>
@@ -115,142 +117,80 @@
 		<!-- <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('Oa_customer')"><i class="fas fa-trash-alt"></i> 删除</button> -->
 	</nav>
 	<div class="add-box">
-		<form class="addForm" id="form1" name="form1" method="post" action="__URL__/saveCustomerrecord">
-			<input name="id" type="hidden" id="id" value="<{$_GET['id']}>" />
-			<input name="staffID" type="hidden" id="staffID" value="<{$Think.session.staffID}>" />
-			<table width="100%" border="0" cellspacing="0" cellpadding="0">
-				<tbody>
-
-					<tr>
-						<td align="center">ID</td>
-						<td ondblclick="ShowElement(this, 'reName', 'ID')" width="38%">
-							< {$data.reName}>
-						</td>
-						<td align="center">名片照片</td>
-						<td ondblclick="ShowElement(this, 'telPhone', '名片照片')">
-							< {$data.telPhone}>
-						</td>
-					</tr>
-
-					<tr>
-						<td align="center">姓名</td>
-						<td ondblclick="ShowElement(this, 'telPhone2', '姓名')">
-							< {$data.telPhone2}>
-						</td>
-						<td align="center">性别</td>
-						<td ondblclick="ShowElement(this, 'email', '性别')">
-							< {$data.email}>
-						</td>
-					</tr>
-
-					<tr>
-						<td align="center">职位</td>
-						<td ondblclick="ShowElement(this, 'companyName', '职位')">
-							< {$data.companyName}>
-						</td>
-						<td align="center">公司</td>
-						<td>
-							< {$data.industry}>
-						</td>
-					</tr>
-
-					<tr>
-						<td align="center">计划成单日期</td>
-						<td>
-							< {$data.regMoney}>
-						</td>
-						<td align="center">邮箱</td>
-						<td>
-							< {$data.regDate}>
-						</td>
-					</tr>
-
-					<tr>
-						<td align="center">联系方式</td>
-						<td ondblclick="ShowElement(this, 'address', '联系方式')">
-							< {$data.address}>
-						</td>
-						<td align="center">地址</td>
-						<td ondblclick="ShowElement(this, 'address', '联系方式')">
-							< {$data.address}>
-						</td>
-					</tr>
-
-					<tr>
-						<td align="center">网址</td>
-						<td ondblclick="ShowElement(this, 'address', '概述')">
-							< {$data.address}>
-						</td>
-						<td align="center">微信</td>
-						<td>
-							< {$data.address}>
-						</td>
-					</tr>
-
-					<tr>
-						<td align="center">分组名称</td>
-						<td>
-							< {$data.note}>
-						</td>
-						<td align="center">标签</td>
-						<td>
-							<select name="status" id="status" class="form-control">
-								<option value="4">名称</option>
-								<option value="3">标签总数</option>
-							</select>
-						</td>
-					</tr>
-					<tr>
-						<td align="center">相关讨论组</td>
-						<td>
-							<select name="status" id="status" class="form-control">
-								<option value="4">名称</option>
-								<option value="3">组内人数</option>
-								<option value="3">成员</option>
-							</select>
-						</td>
-						<td align="center">相关商机</td>
-						<td>
-							< {$data.note}>
-						</td>
-					</tr>
-
-					<tr>
-						<td align="center">信息来源</td>
-						<td colspan="3"><textarea name="desc" id="desc" cols="45" rows="5" class="form-control" datatype="*" nullmsg="请填写沟通记录"
-							 style="width:100%;height:200px; margin:10px 0px;" placeholder="请填写信息来源"></textarea></td>
-					</tr>
-
-					<!-- <tr>
-						<td></td>
-						<td colspan="3">
-							<button type="submit" class="btn btn-success" id="saveButton"><i class="fa fa-check" aria-hidden="true"></i>
-								添加记录</button>
-							<button type="button" class="btn btn-default" id="cancelButton"><i class="fa fa-arrow-alt-circle-right"></i> 下一条</button>
-							<button type="button" class="btn btn-default" id="cancelButton"><i class="fa fa-arrow-alt-circle-left"></i> 上一条</button>
-							<button type="button" class="btn btn-default" id="cancelButton"><i class="fa fa-times" aria-hidden="true"></i>
-								发送邮件</button>
-							<button type="button" class="btn btn-default" id="cancelButton"><i class="fa fa-times" aria-hidden="true"></i>
-								设置提醒</button>
-						</td>
-					</tr> -->
-
-					<tr>
-						<td align="center" style="font-weight: normal;line-height: 30px;padding: 15px;">
-							< {$vo.staffName}><br>
-								<font>
-									< {$vo.addTime}>
-								</font>
-						</td>
-						<td colspan="3" style="padding: 15px;line-height: 28px;">
-							< {$vo.desc}>
-						</td>
-					</tr>
-
-				</tbody>
-			</table>
-		</form>
-		
+		<input name="id" type="hidden" id="id" value="" />
+		<input name="staffID" type="hidden" id="staffID" value="" />
+		<table width="100%" border="0" cellspacing="0" cellpadding="0">
+			<tbody>
+				<!-- <tr>
+					<td align="center">ID</td>
+					<td width="38%"></td>
+					<td align="center">名片照片</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td align="center">姓名</td>
+					<td></td>
+					<td align="center">性别</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td align="center">职位</td>
+					<td></td>
+					<td align="center">公司</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td align="center">计划成单日期</td>
+					<td></td>
+					<td align="center">邮箱</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td align="center">联系方式</td>
+					<td></td>
+					<td align="center">地址</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td align="center">网址</td>
+					<td></td>
+					<td align="center">微信</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td align="center">分组名称</td>
+					<td></td>
+					<td align="center">标签</td>
+					<td>
+						<select name="status" id="status" class="form-control">
+							<option value="4">名称</option>
+							<option value="3">标签总数</option>
+						</select>
+					</td>
+				</tr>
+				<tr>
+					<td align="center">相关讨论组</td>
+					<td>
+						<select name="status" id="status" class="form-control">
+							<option value="4">名称</option>
+							<option value="3">组内人数</option>
+							<option value="3">成员</option>
+						</select>
+					</td>
+					<td align="center">相关商机</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td align="center">信息来源</td>
+					<td colspan="3"><textarea name="desc" id="desc" cols="45" rows="5" class="form-control" datatype="*" nullmsg="请填写沟通记录"
+							style="width:100%;height:200px; margin:10px 0px;" placeholder="请填写信息来源"></textarea></td>
+				</tr>
+				<tr>
+					<td align="center" style="font-weight: normal;line-height: 30px;padding: 15px;"></td>
+					<td colspan="3" style="padding: 15px;line-height: 28px;"></td>
+				</tr> -->
+			</tbody>
+		</table>
 	</div>
 
 </body>
