--- a/pages/AddUser/index.html
+++ b/pages/AddUser/index.html
@@ -6,6 +6,10 @@
     <title>新增用户</title>
     <script src="/js/load.js"></script>
     <link rel="stylesheet" href="/css/rightCommon.css">
+    <!--引入CSS-->
+    <link rel="stylesheet" type="text/css" href="/tools/webuploader-0.1.5/dist/webuploader.css">
+    <!--引入JS-->
+    <script type="text/javascript" src="/tools/webuploader-0.1.5/dist/webuploader.js"></script>
 </head>
 
 <body>
@@ -22,8 +26,8 @@
     </nav>
 
     <div class="add-box">
-        <form class="addForm ajax-fadein" id="form1" name="form1" method="post" action="">
-            <input name="id" type="hidden" id="id" value="">
+        <form class="addForm ajax-fadein" id="form1" name="form1" method="post" action="http://hande.icpnt.com/register">
+            <input name="authToken" type="hidden" id="authToken" value="">
             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                 <tbody>
                     <tr>
@@ -38,14 +42,14 @@
 
                     <tr>
                         <td align="center">密码</td>
-                        <td><input type="passwd" name="passwd" id="business_passwd" class="form-control" datatype="*6-15" errormsg="密码范围在6~15位之间" nullmsg="请输入密码" placeholder="请输入密码"></td>
+                        <td><input type="password" name="passwd" id="business_passwd" class="form-control" datatype="*6-15" errormsg="密码范围在6~15位之间" nullmsg="请输入密码" placeholder="请输入密码"></td>
                     </tr>
 
                     <tr>
                         <td align="center">性别</td>
                         <td>
-                            <input type="radio" value="1" name="gender" checked/>男
-                            <input type="radio" value="2" name="gender"/>女
+                            <input type="radio" value="男" name="gender" checked/>男
+                            <input type="radio" value="女" name="gender"/>女
                         </td>
                     </tr>
                     
@@ -60,8 +64,15 @@
                     </tr>
 
                     <tr>
-                        <td align="center">头像</td>
-                        <td><input type="text" name="icon" id="icon" class="form-control" datatype="*"  nullmsg="请上传头像" placeholder="请上传头像"></td>
+                        <td align="center" style="padding:30px 30px 30px 20px;">头像</td>
+                        <td>
+                            <div id="icon-image" style="margin:10px 0;width:180px;height:180px;overflow: hidden;">
+                                <img style=" width:180px;" />
+                            </div>
+                            <span>图片大小180*180</span>
+                            <input type="hidden" name="file_base64" id="file_base64">
+                            <input type="file" name="icon" id="icon" nullmsg="请上传头像" placeholder="请上传头像" accept="image/jpeg,image/png,image/jpg,image/gif" width="30%" style="margin-bottom:10px;">
+                        </td>
                     </tr>
 
                     <tr>
@@ -70,13 +81,21 @@
                     </tr>
 
                     <tr>
-                        <td align="center">部门</td>
-                        <td><input type="text" name="department" id="department" class="form-control" datatype="*"  nullmsg="请选择部门" placeholder="请选择部门"></td>
+                        <td align="center">公司</td>
+                        <td>
+                            <select class="form-control" name="company" id="company" datatype="*" nullmsg="请选择公司名称" placeholder="请选择公司名称">
+                                <option value="" selected>---请选择公司---</option>
+                            </select>
+                        </td>
                     </tr>
 
                     <tr>
-                        <td align="center">公司</td>
-                        <td><input type="text" name="company" id="company" class="form-control" datatype="*"  nullmsg="请选择公司名称" placeholder="请选择公司名称"></td>
+                        <td align="center">部门</td>
+                        <td>
+                            <select class="form-control" name="department" id="department" datatype="*" nullmsg="请选择部门名称" placeholder="请选择部门名称">
+                                <option value="" selected>---请选择部门---</option>
+                            </select>
+                        </td>
                     </tr>
 
                     <tr>
@@ -84,7 +103,6 @@
                         <td><input type="text" name="address" id="address" class="form-control"  placeholder="请输入地址"></td>
                     </tr>
                     
-
                     <tr>
                         <td>&nbsp;</td>
                         <td>
@@ -101,9 +119,125 @@
 
 
 </body>
-
-<!-- 验证 
-!/^((13[0-9])|(14[5,7,9])|(15[^4])|(18[0-9])|(19[9])|(17[0,1,3,5,6,7,8]))\d{8}$/.test($("#reg-phone").val())
-
--->
+<script>
+// 获取token
+function getToken(){
+    var token = sessionStorage.getItem("token");
+    $('#authToken').val(token);
+}
+getToken();
+// 隐藏空白头像
+$('#icon-image').hide();
+// 上传头像
+$('#icon').change(function(e){
+    var path = $(this).val(),
+    extStart = path.lastIndexOf('.'),
+    ext = path.substring(extStart,path.length).toUpperCase();
+    console.log(path);
+    if(ext !== null){
+        //判断图片格式
+        if(ext !== '.PNG' && ext !== '.JPG' && ext !== '.JPEG' && ext !== '.GIF'){
+          alert('请上传正确格式的图片');
+          $('#icon-image').hide();
+          return false;
+        }
+        //获取图片大小，注意使用this，而不是$(this)
+        var size = this.files[0].size / 1024;
+        if(size > 10240){
+          alert('图片大小不能超过10M');
+          return false;
+        }
+        var imgBox = e.target;
+        uploadImg(imgBox) 
+    }
+});
+//上传图片时调用的接口
+function uploadImg(tag) {
+    var file = tag.files[0];
+    var imgSrc;
+    if (!/image\/\w+/.test(file.type)) {
+        alert("看清楚，这个需要图片！");
+        return false;
+    }
+    var reader = new FileReader();
+    reader.readAsDataURL(file);
+    reader.onload = function() {
+        imgSrc = this.result;
+        $("#icon-image").find("img").attr({"src": imgSrc});
+    };
+    // 显示头像
+    $('#icon-image').show();
+}
+// 获取公司
+$.ajax({
+    type: "GET",
+    url: APP_URL + "/companySelect",
+    data: {
+    authToken: token
+    },
+    dataType: "json",
+    success: function (res) {
+        console.log('companyList',res);
+        var data = res.data;
+        var str = "<option value='' selected>---请选择公司---</option>";
+    $.each(data, function (index, val) {
+        str += `
+            <option value="${val.id}">${val.companyname}</option>
+        `;
+        });
+        // console.log('str',str)
+        $("#company").html(str);
+    }
+});
+// 获取部门
+$("#company").change(function(){
+    var companyId = $('#company option:selected').val();
+    $.ajax({
+        type: "GET",
+        url: APP_URL + "/departmentSelect",
+        data: {
+        authToken: token,
+        companyId: companyId
+        },
+        dataType: "json",
+        success: function (res) {
+            console.log('departmentList',res);
+            var data = res.data;
+            var str = "<option value='' selected>---请选择部门---</option>";
+        $.each(data, function (index, val) {
+            str += `
+                <option value="${val.id}">${val.departname}</option>
+            `;
+            });
+            // console.log('str',str)
+            $("#department").html(str);
+        }
+    });
+})
+//点击添加用户,提交表单 
+// $("#saveButton").click(function(){
+//     alert('baocun')
+//     // $.ajax({
+//     //     type: "GET",
+//     //     url: APP_URL + "/register",
+//     //     data: {
+//     //     authToken: token,
+//     //     company:
+//     //     },
+//     //     dataType: "json",
+//     //     success: function (res) {
+//     //         console.log('departmentList',res);
+//     //         var data = res.data;
+//     //         var str = "<option value='' selected>---请选择部门---</option>";
+//     //     $.each(data, function (index, val) {
+//     //         str += `
+//     //             <option value="${val.id}">${val.departname}</option>
+//     //         `;
+//     //         });
+//     //         // console.log('str',str)
+//     //         $("#department").html(str);
+//     //     }
+//     // });
+// })
+</script>
 </html>
