--- a/pages/UserList/index.html
+++ b/pages/UserList/index.html
@@ -19,7 +19,7 @@
 <button type="button" class="btn btn-info navbar-btn listButton" onclick="javascript:window.location.href='__URL__/importCustomer'"><i class="fa fa-sign-in" aria-hidden="true"></i>筛选</button>
 <button type="button" class="btn btn-success navbar-btn listButton" onclick="openAddData('../AddUser/index.html')"><i class="fa fa-plus" aria-hidden="true"></i> 新建</button>
 <button type="button" class="btn btn-primary navbar-btn listButton" onclick="javascript:if(confirm('由于数据存在关联查询，导出Exce可能需要1-3分钟的时间，确定要导出吗（确定后请勿刷新页面或关闭浏览器）?'))location='/manage.php/Order/exportExcel?startTime=&amp;endTime=&amp;business_id=&amp;one_category=&amp;two_category='"><i class="fa fa-sign-in" aria-hidden="true"></i> 导出Excel</button>
-<form class="navbar-form navbar-right listSearch" role="search" method="get" action="__ACTION__">
+<form class="navbar-form navbar-right listSearch" role="search" method="get" >
 <div class="form-group">
 <div class="form-group">
     手机号:
