--- a/pages/AddCompany/index.html
+++ b/pages/AddCompany/index.html
@@ -7,7 +7,7 @@
     <script src="/js/load.js"></script>
     <link rel="stylesheet" href="/css/rightCommon.css">
     <link rel="stylesheet" href="./addCompany.css">
-    <script src="./addCompanyt.js"></script>
+    <script src="./addCompany.js"></script>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
     </nav>
 
     <div class="add-box">
-        <form class="addForm ajax-fadein" id="form1" name="form1" method="post" action="http://hande.icpnt.com/addCompany">
+        <form class="addForm ajax-fadein" id="form1" name="form1" method="post" action="http://hande.icpnt.com/addCompany"></form>
             <input name="authToken" type="hidden" id="authToken" value="">
             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                 <tbody>
