--- a/pages/CompanyList/index.html
+++ b/pages/CompanyList/index.html
@@ -16,7 +16,7 @@
             <a class="navbar-brand" href="#">公司管理</a>
         </div>
         <div>
-            <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/deleteCompany')"><i class="fas fa-trash-alt"></i>
+            <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/deleteCompany','GET','companyId')"><i class="fas fa-trash-alt"></i>
                 删除</button>
             <button type="button" class="btn btn-info navbar-btn listButton" onclick="editData('../EditCompany/index.html')"><i class="fas fa-edit"></i>
                 修改</button>
