--- a/pages/MessageManage/index.html
+++ b/pages/MessageManage/index.html
@@ -18,7 +18,7 @@
             <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('News')"><i class="fas fa-trash-alt"></i>
                 删除</button>
             <!-- <button type="button" class="btn btn-info navbar-btn listButton" onclick="editData('addNews')"><i class="fas fa-edit"></i> 修改</button> -->
-            <button type="button" class="btn btn-success navbar-btn listButton" onclick="openAddData('addNews')"><i
+            <button type="button" class="btn btn-success navbar-btn listButton" onclick="openAddData('../AddMessage/index.html')"><i
                     class="fa fa-plus" aria-hidden="true"></i> 新建</button>
             <form class="navbar-form navbar-right listSearch" role="search" method="get" action="__ACTION__">
                 <div class="form-group">
