--- a/pages/RoleManage/index.html
+++ b/pages/RoleManage/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
+<title>角色管理</title>
 <script src="/js/load.js"></script>
 <link rel="stylesheet" href="/css/rightCommon.css">
 </head>
@@ -11,12 +11,12 @@
 
 <nav class="navbar navbar-default" role="navigation">
 <div class="navbar-header">
-<a class="navbar-brand" href="#"></a>
+<a class="navbar-brand" href="#">角色管理</a>
 </div>
 <div>
 <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('Rule')"><i class="fas fa-trash-alt"></i> 删除</button>
 <button type="button" class="btn btn-info navbar-btn listButton" onclick="editData('addRule')"><i class="fas fa-edit"></i> 修改</button>
-<button type="button" class="btn btn-success navbar-btn listButton" onclick="openAddData('addRule')"><i class="fa fa-plus" aria-hidden="true"></i> 新建</button>
+<button type="button" class="btn btn-success navbar-btn listButton" onclick="openAddData('../AddRole/index.html')"><i class="fa fa-plus" aria-hidden="true"></i> 新建</button>
 <form class="navbar-form navbar-right listSearch" role="search" method="get" action="__ACTION__">
 <div class="form-group">
 <input name="keyWord" type="text" class="form-control" id="keyWord" placeholder="请输入关键词进行搜索">
